.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Step__c.object
<CustomObject>
    <description>Test Steps can be stored as test application files or defined on a line by line basis with expected results</description>
    <fields>
        <fullName>provar__Action_Long__c</fullName>
        <label>Action (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only active test steps appear when entering manual test results.</description>
        <inlineHelpText>Uncheck to hide this test step appearing during execution results capture</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Data_Long__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Data__c</fullName>
        <description>Test data values to be used or reference to test data source file</description>
        <inlineHelpText>Enter any literal test data values to be used or a specification of the test data values to be extracted</inlineHelpText>
        <label>Data (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Delete_Without_Cascading__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Deletes the step without deleting its children.</inlineHelpText>
        <label>Delete Without Cascading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Expected_Result_Long__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Expected_Result__c</fullName>
        <description>The expected result or outcome of performing this step</description>
        <inlineHelpText>Value or behaviour expected or to validate for during execution</inlineHelpText>
        <label>Expected Result (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to match test steps from other platforms.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Parent_Test_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to define a test step hierarchy</description>
        <label>Parent Test Step</label>
        <referenceTo>provar__Test_Step__c</referenceTo>
        <relationshipLabel>Child Test Steps</relationshipLabel>
        <relationshipName>Child_Test_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Sequence_No__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The sequence in which this test step appears in the test results capture page</description>
        <inlineHelpText>Enter a unique number for the test step within this test case. You can reorder test steps if needed later.</inlineHelpText>
        <label>Sequence No</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case__c</fullName>
        <description>The Test Case defines a sequence of test steps to be executed either manually or using an automated test tool</description>
        <inlineHelpText>The parent test case to which this step belongs</inlineHelpText>
        <label>Test Case</label>
        <referenceTo>provar__Test_Case__c</referenceTo>
        <relationshipLabel>Test Steps</relationshipLabel>
        <relationshipName>Test_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case_to_Call__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to trigger another test case at this step</inlineHelpText>
        <label>Test Case to Call</label>
        <referenceTo>provar__Test_Case__c</referenceTo>
        <relationshipLabel>Called by</relationshipLabel>
        <relationshipName>Test_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Step_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Test Step Type</label>
        <referenceTo>provar__Test_Step_Type__c</referenceTo>
        <relationshipLabel>Test Steps</relationshipLabel>
        <relationshipName>Test_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Step</label>
    <nameField>
        <label>Action (Short)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>